--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   pull_and_package:
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
 
     steps:
     - name: Checkout repository
